--- a/src/css/style.css
+++ b/src/css/style.css
@@ -527,7 +527,7 @@ nav ul li {
 ===============================================================*/
 
 .home {
-    background: url(../assets/images/homebg.png) no-repeat top center #141315;
+    /* background: url(../assets/images/homebg.png); */
     background-size: cover;
     position: relative;
     padding-top: 80px;
@@ -535,7 +535,7 @@ nav ul li {
 }
 
 .main_home {
-    padding: 25% 20px 170px 20px;
+    /* padding: 25% 20px 170px 20px; */
     position: relative;
 }
 
