--- a/src/component/Base/Landing/Landing.css
+++ b/src/component/Base/Landing/Landing.css
@@ -6,19 +6,14 @@ display: flex;
 flex-direction: column;
 }
 
-.logo{
+.mainLogo{
     position: relative;
     align-items: center;
-    margin: 5% 5% 5% 45%;
     justify-content: center;
-    height: 5rem;
-    width: 5rem;
-    border: solid 2px red;
+    height: 25rem;
+    width: 25rem;
 }
-.logo>img{
-    height: 2rem;
-    width:  2rem;
-}
+
 
 /* CSS */
 .button-30 {
