--- a/src/component/Base/Main/Main.css
+++ b/src/component/Base/Main/Main.css
@@ -65,7 +65,28 @@ p {
 }
 
 .bg1 {
-  background: url("https://i.ibb.co/dBLbrRV/bg1.jpg");
+  background: url("https://i.ibb.co/st83YDp/jazmin-quaynor-RIQmx5x5sq-I-unsplash.jpg");
+}
+
+.bg > p{
+  color: red;
+}
+
+.threeD { /* From http://markdotto.com/2011/01/05/3d-text-using-just-css/ */
+  font-size: 30px;
+  color: #f1ebe5;
+  text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
 }
 
 .bg2 {
