--- a/src/App.css
+++ b/src/App.css
@@ -40,4 +40,16 @@
 
 .eventCard{
   height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: auto;
+}
+
+html body {
+  background: url("../src/asset/card.jpg") no-repeat top center;
+background-size:100% 100%;
+height: 100vh;
+width: 100vw;
+
 }
